cli/tests/data/VisualStudioProjects/CompilationError/Makefiles/Bakefile/CompilationError.bkl
toolsets = gnu vs2022 vs2019 vs2017 vs2015;

gnu.makefile = ../gnumake/GNUmakefile;
vs2022.solutionfile = ../vc17/CompilationError.sln;
vs2019.solutionfile = ../vc16/CompilationError.sln;
vs2017.solutionfile = ../vc15/CompilationError.sln;
vs2015.solutionfile = ../vc14/CompilationError.sln;

program CompilationError
{
    if ($(toolset) != gnu)
    {
        archs = x86 x86_64;
    }

    sources
    {
        ../../Source/main.cpp
    }
}
